# gradiobackendbasic

./: README.md  blocks.py  blocks_state.py  database.py  integration.py  interface_state.py  shareapp.py
custom_component/: README.md  publish.sh
custom_component/mycomponent/: pyproject.toml
custom_component/mycomponent/backend/gradio_mycomponent/: __init__.py  mycomponent.py  test_component.py
custom_component/mycomponent/frontend/: package.json
discord_deploy/: deploy.sh  translator.py
