[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
#name = "gradio_mycomponent" automatically written as the lower-case of gradio cc create <name>
name = "supertextbox" #reconfiged name -> change all occurence of past name to this
version = "0.0.1"
description = "Python library for easily interacting with trained machine learning models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [{ name = "YOUR NAME", email = "YOUREMAIL@domain.com" }]
keywords = [
  "machine learning",
  "reproducibility",
  "visualization",
  "gradio",
  "gradio custom component",
  "gradio-template-SimpleTextbox"
]
# Add dependencies here
dependencies = ["gradio>=4.0,<5.0"] #change this to add python dependencies
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = ["/backend/gradio_mycomponent/templates", "*.pyi"] #here
#to use a new folder edit this 
[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_mycomponent"] #also here must be changed to new name
#also edit this for a new folder 
#then change folder name as well 
#change the import statement in app.py for demo 

